--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/thupq/ex3ej#readme",
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "layouts": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
